Edited wiki page through web user interface.

--- a/wiki/WindowsAmpacheServer.wiki
+++ b/wiki/WindowsAmpacheServer.wiki
@@ -3,6 +3,11 @@
 == Official Instructions ==
 [http://ampache.org/wiki/install:windows Offical Ampache Instructions for Windows]
 
+
+
+== Videos ==
+[http://www.youtube.com/watch?v=-S5JUC0iEVw Simple XAMPP with DynDns Tutorial]
+
 == Windows Vista Guide ==
 There is also step-by-step guide created by Fain, the creator of [http://www.precentral.net/homebrew-apps/ampachpre AmpachPre].
 
