--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -10,7 +10,7 @@
 Ampache Mobile is just an app that plays music from a server, an [http://ampache.org Ampache server].  You are responsible for setting up your own server.
  * [AmpacheServerSetup Server Setup]
 ===Yes===
-
+See Below
 
 = Ampache-mobile doesn't work =
    * If Ampache-mobile starts up and seems to run's OK on your Pre, but you are unable to connect to your music server, use the test below to help you figure out why Ampache-mobile isn't working.
