--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -92,10 +92,10 @@ Timeout 600
     # Set Apache Timeout Workaround in Ampache Mobile to 600
 
 =Getting XML Errors Loading Lists=
-  # Empty fields in your music tags.
+==Empty fields in your music tags==
     * webOS has a few issues with processing xml which are exposed when you have empty fields in your tags.  [https://developer.palm.com/distribution/viewtopic.php?f=80&t=6719 See webOS bug report]
     * A simple solution is to use an id3 tag editor to fill those fields in and rescan your music catalog.
       * For Artists: Amapache Mobile uses Name only from the tag
       * For Albums: Its Artist, Album, Year and Genre (optional) 
-  # Corrupt data inside tags
+==Corrupt data inside tags==
     * Sometimes music tags can get corrupt.  An easy way to spot this corruption is to browse your collection with Ampache.  If you notice any strange characters investigate the tag with a tag editor, I'd even just go ahead and rewrite them to the file.  Once complete rescan your catalog.
