--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -18,14 +18,15 @@ See Below for more information on how this works.
 ----
 If Ampache-mobile starts up and seems to run's OK on your Pre, but you are unable to connect to your music server, use the test below to help you figure out why Ampache-mobile isn't working.
 ==Server Test==
-        # Are you running the correct version of Ampache?  Ampache Mobile requires at least version 3.5.1 of Ampache to operate correctly.  [http://ampache.org/download.php Download]
-        # Can you access Ampache using a web browser from the machine it is running on (i.e http://localhost )?  If no, then it looks like your Ampache music server is not working yet.
-        # Can you access Ampache using a web browser from another machine on your network (i.e. http://192.168.x.x  or 10.x.x.x or 172.16.x.x )? If no, it could be a firewall issue on the machine running the Amapche music server or maybe an Ampache Server ACL rule. 
-           * See this [http://www.ehow.com/how_2317017_turn-off-firewalls-computer.html page] on "how to turn off your firewall".
-           * Check out this [http://ampache.org/wiki/config:acl page] on Ampache ACL rules  
-        # Can you access Ampache using a web browser via Wifi from your Pre(i.e. http://192.168.x.x)? If no, it could be a firewall issue on the machine running the Amapche music server or maybe an ACL rule. See links above.
-        # Can you access Ampache using Ampache-mobile via Wifi from your Pre?
-   * You may want to go through the steps above before posting a "Ampache-mobile isn't working" post and then posting which of the above steps worked for you and which didn't.
+  # Are you running the correct version of Ampache?  Ampache Mobile requires at least version 3.5.1 of Ampache to operate correctly.  [http://ampache.org/download.php Download]
+  # Can you access Ampache using a web browser from the machine it is running on (i.e `http://localhost/ampache` )?  If no, then it looks like your Ampache music server is not working yet.
+  # Can you access Ampache using a web browser from another machine on your network (i.e. `http://192.168.x.x/ampache`  or `10.x.x.x` or `172.16.x.x` )? If no, it could be a firewall issue on the machine running the Amapche music server or maybe an Ampache Server ACL rule. 
+    * See this [http://www.ehow.com/how_2317017_turn-off-firewalls-computer.html page] on "how to turn off your firewall".
+    * Check out this [http://ampache.org/wiki/config:acl page] on Ampache ACL rules  
+  # Can you access Ampache using a web browser via Wifi from your Pre(i.e. `http://192.168.x.x/ampache`)? If no, it could be a firewall issue on the machine running the Amapche music server or maybe an ACL rule. See links above.
+  # Can you access Ampache using Ampache Mobile via Wifi from your Pre?
+
+You may want to go through the steps above before posting a "Ampache Mobile isn't working" post and then posting which of the above steps worked for you and which didn't.
    
 
 = Works on Wifi but not EVDO =
