--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -15,6 +15,7 @@ When have completed all setup you should be able to access your Ampache Server f
 See Below for more information on how this works.
 
 = Ampache-mobile doesn't work =
+ NOTE:URLs are examples yours may be different.
 ----
 If Ampache-mobile starts up and seems to run's OK on your Pre, but you are unable to connect to your music server, use the test below to help you figure out why Ampache-mobile isn't working.
 ==Server Test==
