--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -16,9 +16,12 @@ See Below for more information on how this works.
 
 = Ampache-mobile doesn't work =
 ----
-If Ampache-mobile starts up and seems to run's OK on your Pre, but you are unable to connect to your music server, use the test below to help you figure out why Ampache-mobile isn't working.
-==Server Test==
-NOTE:URLs are examples yours may be different.
+If Ampache Mobile starts up and seems to run's OK on your Pre, but you are unable to connect to your music server, use the test below to help you figure out why Ampache Mobile isn't working.
+
+You may want to go through the steps above before posting a "Ampache Mobile isn't working" post and then posting which of the above steps worked for you and which didn't.
+
+==Ampache Server Test==
+NOTE:URLs are examples, yours may be different.
 ===Step 1===
 Are you running the correct version of Ampache?  Ampache Mobile requires at least version 3.5.1 of Ampache to operate correctly.  [http://ampache.org/download.php Download]
 ===Step 2===
@@ -35,8 +38,6 @@ Can you access Ampache using a web browser via Wifi from your Pre (i.e. `http://
 If no, it could be a firewall issue on the machine running the Amapche music server or maybe an ACL rule. See links above.
 ===Step 5==
 Can you access Ampache using Ampache Mobile via Wifi (Using the same URL from Step 4) from your Pre?
-
-You may want to go through the steps above before posting a "Ampache Mobile isn't working" post and then posting which of the above steps worked for you and which didn't.
    
 
 = Works on Wifi but not EVDO =
