--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -18,7 +18,8 @@ See Below for more information on how this works.
 ----
 If Ampache Mobile starts up and seems to run's OK on your Pre, but you are unable to connect to your music server, use the test below to help you figure out why Ampache Mobile isn't working.
 
-You may want to go through the steps above before posting a "Ampache Mobile isn't working" post and then posting which of the above steps worked for you and which didn't.
+Please go through the steps before posting a "Ampache Mobile isn't working" post. 
+If you still have issues after doing this test then posting which of the steps worked for you and which didn't.
 
 ==Ampache Server Test==
 NOTE:URLs are examples, yours may be different.
