--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -19,7 +19,7 @@ See Below for more information on how this works.
 If Ampache Mobile starts up and seems to run's OK on your Pre, but you are unable to connect to your music server, use the test below to help you figure out why Ampache Mobile isn't working.
 
 Please go through the steps before posting a "Ampache Mobile isn't working" post. 
-If you still have issues after doing this test then posting which of the steps worked for you and which didn't.
+If you still have issues after doing this test then post which of the steps worked for you and which didn't.
 
 ==Ampache Server Test==
 NOTE:URLs are examples, yours may be different.
