--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -14,7 +14,7 @@ When have completed all setup you should be able to access your Ampache Server f
 
 See Below for more information on how this works.
 
-= Ampache-mobile doesn't work =
+= Ampache Mobile doesn't work =
 ----
 If Ampache Mobile starts up and seems to run's OK on your Pre, but you are unable to connect to your music server, use the test below to help you figure out why Ampache Mobile isn't working.
 
