--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -42,12 +42,12 @@ If no, it could be a firewall issue on the machine running the Amapche music ser
 Can you access Ampache using Ampache Mobile via Wifi (Using the same URL from Step 4) from your Pre?
 = Works on Wifi but not EVDO/3G =
 ----
-== IP Address ==
+== IP Address Correct?==
 Are you connecting to a private network address IP Address like `192.168.x.x`  or `10.x.x.x` or `172.16.x.x` ?  
 Most Wi-Fi routers have an internal IP pool and one External IP.  
   * A `192.168.x.x/10.x.x.x/172.16.x.x` address is Internal and not accessible via EVDO
   * To find your external address try this link [http://www.whatismyip.com/]
-== Port Forwarding==
+== Port Forwarding Setup?==
 Once you determine your internal address and external IP address you need to setup port forwarding on your router (or a "virtual port" on some routers).
     * Your goal is to forward your External IP address to your Internal Ampache Server address. Imagine that your router is a large building. 
         * The building has a unique public address that can be seen by everyone on the outside world (i.e. external IP address).
