--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -134,7 +134,8 @@ Timeout 600
       * For Albums: Its Artist, Album, Year and Genre (optional) 
 ==Corrupt data inside tags==
     * Sometimes music tags can get corrupt.  An easy way to spot this corruption is to browse your collection with Ampache.  If you notice any strange characters investigate the tag with a tag editor, I'd even just go ahead and rewrite them to the file.  Once complete rescan your catalog.
-=Videos Not Working==
+=Videos Not Working=
+----
 ==Incorrect Video Format==
 The supported audio/video types for webOS are MP4, M4A, M4V, MOV, 3GP, and 3G2.
 	
