--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -51,8 +51,8 @@ Most Wi-Fi routers have an internal IP pool and one External IP.
 Once you determine your internal address and external IP address you need to setup port forwarding on your router (or a "virtual port" on some routers).
     * Your goal is to forward your External IP address to your Internal Ampache Server address. Imagine that your router is a large building. 
         * The building has a unique public address that can be seen by everyone on the outside world (i.e. external IP address).
-        * The building has 100's of outside doors (i.e. Ports).
-        * Each outside door has a unique number (i.e. Port number). 
+        * The building has 100's of outside doors (i.e. the ports on you router).
+        * Each outside door has a unique number (i.e. port numbers on you router). 
         * Almost all outside doors are always locked.
         * The building has one or more suites inside (i.e. private network address IP).
         * By default, the suites cannot be accessed from the outside: there are no hallways going from the outside doors to the suites.
